# lightning

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  cmake.toml  lexer-test.li  license.md  parser-test.li  repl.cpp
.github/workflows/: cmake.yml
build-vs22/: build-vs22.sln  build-vs22.vcxproj  build-vs22.vcxproj.filters
include/ir/: arch.hpp  bc2ir.hpp  insn.hpp  ir2mir.hpp  lifter.hpp  mir.hpp  opt.hpp  proc.hpp  value.hpp  x86-64.hpp  zydis.hpp
include/jit/: regalloc.hpp  target.hpp  zydis.hpp
include/lang/: lexer.hpp  operator.hpp  parser.hpp  types.hpp
include/lib/: fs.hpp  std.hpp
include/mir/: core.hpp
include/util/: bitset.hpp  common.hpp  enuminfo.hpp  fastlock.hpp  format.hpp  func.hpp  llist.hpp  ltti.hpp  platform.hpp  typeinfo.hpp  user.hpp  utf.hpp
include/vm/: array.hpp  bc.hpp  function.hpp  gc.hpp  object.hpp  runtime.hpp  state.hpp  string.hpp  (+4 more)
src/: lexer.cpp  main.cpp  platform.cpp
tests/: CMakeLists.txt  class-tests.li  construct-loop.li  deconstructing.li  destructuring.li  eval.li  export-test.li  export.li  format-string.li  function.li  import-test.li  loop.li  loops.li  opeator-in.li  operator-arithmetic.li  operator-chain.li  operator-idx.li  operator-in.li  operator-incdec.li  operator-is.li  operator-logic.li  operator-nullc.li  pcall.li  random.li  rawgetset.li  reference-arg.li  self.li  special-dup.li  special-join.li  special-len.li  special-names.li  stacktrace.li  std-coerce.li  std-eval.li  std-random.li  stridx.li  string-esacpe.li  traits-vec3-sample.li  traits.li  try-catch.li  (+4 more)
(+47 files in other folders)
